@@ -1,5 +1,10 @@
 2004-09-06  Murray Cumming  <murrayc@murrayc.com>
 
+	* rnapplets.xml: Mention improved Add dialog.
+	* TODO: Updated.
+
+2004-09-06  Murray Cumming  <murrayc@murrayc.com>
+
 	* rnapplets.xml: Simplified some sentences a bit. Add the figures 
 	sections.
 
